load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "yaml_schema_cpp",
    srcs = [
        "src/expression.cpp",
        "src/type_check.cpp", 
        "src/yaml_generator.cpp",
        "src/yaml_schema.cpp",
        "src/yaml_server.cpp",
        "src/yaml_utils.cpp",
    ],
    hdrs = glob(["include/**/*.hpp", "include/**/*.h"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "@yaml-cpp//:yaml-cpp",
        "@eigen//:eigen",
    ]
)

cc_binary(
    name = "yaml_template_generator",
    srcs = ["src/yaml_template_generator.cpp"],
    deps = [
        ":yaml_schema_cpp",
        "@yaml-cpp//:yaml-cpp",
    ],
)
